examples/test/testpolicy5335.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5335
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key32: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value5
          key10: value12
          key5: value44
      podSelector:
        matchLabels:
          key37: value46
          key17: value43
